--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+# Cancel in-progress runs when a new commit is pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
 
@@ -24,6 +29,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
+          cache: true  # Enable built-in caching
 
       - name: Build
         run: go build -v ./...
@@ -36,3 +42,4 @@ jobs:
         with:
           name: gac-${{ matrix.os }}-${{ matrix.go-version }}
           path: build/gac*
+          retention-days: 30
